[workspace]
resolver = "2"

members = ["uniswap"]

[workspace.dependencies]
ethers = { version = "2.0.11", features = ["legacy", "ws", "rustls"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1.34.0", features = ["full"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = "0.6.8"
serde_json = "1.0.107"
colored = "2.0.4"
