[workspace]
members = ["Crates/uniswap/", "Crates/alloyed"]
resolver = "2"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much
debug = 0

[workspace.package]
version = "0.2.0"
edition = "2021"


[workspace.dependencies]
ethers = { version = "2.0.11", features = ["legacy", "ws", "rustls"] }
tokio = { version = "1.34.0", features = ["full"] }

eyre = "0.6.8"
serde_json = "1.0.107"


## alloy
alloy-primitives = "0.5.0"
alloy-dyn-abi = "0.5.0"
alloy-json-abi = "0.5.0"
alloy-sol-types = "0.5.2"
syn-solidity = "0.5.0"

alloy-chains = "0.1.4"
alloy-rlp = "0.3.3"
solang-parser = "=0.3.3"
