[workspace]
members = ["Crates/uniswap/", "Crates/alloyed"]
resolver = "2"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much
debug = 0

[workspace.package]
version = "0.2.0"
edition = "2021"


[workspace.dependencies]
ethers = { version = "2.0.11", features = ["legacy", "ws", "rustls"] }
tokio = { version = "1.35.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ['sync'] }
reqwest = { version = "0.11.23", features = ["json"] }

log = "0.4.17"

eyre = "0.6.8"
serde_json = "1.0.107"


## alloy
alloy-sol-macro = { version = "0.6.0", features = ["json"] }
alloy-primitives = "0.6.0"
alloy-dyn-abi = "0.6.0"
alloy-json-abi = "0.6.0"
alloy-sol-types = "0.6.0"
syn-solidity = "0.6.0"

alloy-chains = "0.1.9"
alloy-rlp = "0.3.4"
solang-parser = "=0.3.3"
