[package]
name = "alloyed"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
version.workspace = true
edition.workspace = true

[dependencies]
# alloy-json-abi = { workspace = true, optional = true }
# alloy-primitives.workspace = true
# alloy-sol-types.workspace = true
# alloy-sol-macro.workspace = true
eyre.workspace = true


serde_json.workspace = true
ethers = { workspace = true, features = ["legacy", "ws", "rustls"] }
tokio = { workspace = true, features = ["full"] }

reqwest.workspace = true
serde = { version = "1.0.196", features = ["derive"] }
[features]
# json = ["dep:alloy-json-abi"]
