[package]
name = "uniswap"

version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { workspace = true, features = ["legacy", "ws", "rustls"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { workspace = true, features = ["full"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
eyre = { workspace = true }
serde_json = { workspace = true }
alloy-sol-types.workspace = true
