[package]
name = "uniswap"

version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { workspace = true, features = ["legacy", "ws", "rustls"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
eyre.workspace = true
